force-app/main/default/objects/sugati__Group_Member__c/sugati__Group_Member__c.object-meta.xml
<CustomObject>
    <description>A list of people that are travelling...</description>
    <label>Group Member</label>
    <nameField>
        <displayFormat>GM-{0000000000}</displayFormat>
        <label>Group Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>