force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__BirthDate_Formula__c.field-meta.xml
<CustomField>
    <fullName>sugati__BirthDate_Formula__c</fullName>
    <formula>IF( 
AND( 
OR( 
MONTH(sugati__GM_Opportunity__r.sugati__O_Departure_Date__c)&lt;= MONTH(sugati__GM_Contact__r.Birthdate), 
MONTH(sugati__GM_Contact__r.Birthdate)&lt;= MONTH(sugati__GM_Opportunity__r.sugati__O_Return_Date__c) 
), 
OR( 
DAY(sugati__GM_Opportunity__r.sugati__O_Departure_Date__c)&lt;= DAY(sugati__GM_Contact__r.Birthdate), 
DAY(sugati__GM_Contact__r.Birthdate)&lt;= DAY(sugati__GM_Opportunity__r.sugati__O_Return_Date__c) 
) 
), 
true,false 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BirthDate Formula</label>
    <type>Checkbox</type>
</CustomField>