force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__Birthday_Alert_Check__c.field-meta.xml
<CustomField>
    <fullName>sugati__Birthday_Alert_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birthday Alert Check</label>
    <type>Checkbox</type>
</CustomField>