force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Actual_Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Actual_Occupancy_Type__c</fullName>
    <formula>BLANKVALUE(sugati__GM_Occupancy_Type_Overwritten__c, TEXT(sugati__GM_Occupancy_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Occupancy Type</label>
    <type>Text</type>
</CustomField>