force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Age__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Age__c</fullName>
    <label>Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>