force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Balance_Paid__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Balance_Paid__c</fullName>
    <formula>sugati__GM_Total_Payment__c / sugati__S_GM_Individual_Net_Sell_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>