force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Client_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Client_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Payment</label>
    <referenceTo>sugati__Client_Payment__c</referenceTo>
    <relationshipLabel>Group Members</relationshipLabel>
    <relationshipName>Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>