force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Combine_Field_For_Rate_Selection__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Combine_Field_For_Rate_Selection__c</fullName>
    <formula>sugati__GM_First_Name__c  +  &quot; &quot; + sugati__GM_Last_Name__c  +  text(sugati__GM_DOB__c) +  text(sugati__GM_Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combine Field For Rate Selection</label>
    <type>Text</type>
</CustomField>