force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Group Members</relationshipLabel>
    <relationshipName>Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>