force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_DOB__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_DOB__c</fullName>
    <label>DOB</label>
    <type>Date</type>
</CustomField>