force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>