force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Gender__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>