force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>