force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Lead_Passenger__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Lead_Passenger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Passenger</label>
    <type>Checkbox</type>
</CustomField>