force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Name__c</fullName>
    <formula>BLANKVALUE(TEXT(sugati__GM_Salutation__c), Text(sugati__GM_Contact__r.Salutation)) + &apos; &apos; + BLANKVALUE(sugati__GM_First_Name__c, sugati__GM_Contact__r.FirstName) + &apos; &apos; +  sugati__GM_Contact__r.sugati__C_Middle_Name__c  + &apos; &apos; + BLANKVALUE(sugati__GM_Last_Name__c, sugati__GM_Contact__r.LastName)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>