force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Non_Travelling_Lead_Booker__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Non_Travelling_Lead_Booker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Travelling Lead Booker</label>
    <type>Checkbox</type>
</CustomField>