force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Occupancy_Type_Overwritten__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Occupancy_Type_Overwritten__c</fullName>
    <label>Occupancy Type Overwritten</label>
    <length>255</length>
    <type>Text</type>
</CustomField>