force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Group Members</relationshipLabel>
    <relationshipName>Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>