force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Order_in_HE__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Order_in_HE__c</fullName>
    <label>Order in HE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>