force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Phone__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>