force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Relationship__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Grand Father</fullName>
            </value>
            <value>
                <fullName>Grand Mother</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>