force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Salutation__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Dr</fullName>
            </value>
            <value>
                <fullName>Prof</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>