force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Total_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Total_Outstanding__c</fullName>
    <formula>sugati__S_GM_Individual_Net_Sell_Price__c -  sugati__GM_Total_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>