force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Total_Payment__c</fullName>
    <description>Sums up any client payments that have been specified for a particular Group Member</description>
    <label>Total Payment</label>
    <summarizedField>sugati__Client_Payment_Detail__c.sugati__CPD_Amount__c</summarizedField>
    <summaryForeignKey>sugati__Client_Payment_Detail__c.sugati__CPD_Group_Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>