force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Tour_Room_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Tour_Room_Price_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tour Room Price Override</label>
    <referenceTo>sugati__Price_Override__c</referenceTo>
    <relationshipLabel>Group Members</relationshipLabel>
    <relationshipName>Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>