force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__GM_Vamoos_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__GM_Vamoos_Id__c</fullName>
    <externalId>true</externalId>
    <label>Vamoos Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>