force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__Passport_Expiry_Check__c.field-meta.xml
<CustomField>
    <fullName>sugati__Passport_Expiry_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport Expiry Check</label>
    <type>Checkbox</type>
</CustomField>