force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__Role__c.field-meta.xml
<CustomField>
    <fullName>sugati__Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Role</valueSetName>
    </valueSet>
</CustomField>