force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Age_at_departure_date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Age_at_departure_date__c</fullName>
    <formula>IF(NOT(ISBLANK(sugati__GM_Contact__r.Birthdate)), 
    IF(DATE(2000, MONTH(sugati__GM_Contact__r.Birthdate), DAY(sugati__GM_Contact__r.Birthdate)) &lt;= DATE(2000, MONTH(sugati__GM_Opportunity__r.sugati__O_Departure_Date__c), DAY(sugati__GM_Opportunity__r.sugati__O_Departure_Date__c)), 
YEAR(sugati__GM_Opportunity__r.sugati__O_Departure_Date__c) - YEAR(sugati__GM_Contact__r.Birthdate), 
YEAR(sugati__GM_Opportunity__r.sugati__O_Departure_Date__c) - YEAR(sugati__GM_Contact__r.Birthdate) - 1), 
null)</formula>
    <label>Age at Departure Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>