force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Booking_Lead__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Booking_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Lead</label>
    <type>Checkbox</type>
</CustomField>