force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Booking_Status__c</fullName>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled</fullName>
            </value>
            <value>
                <fullName>Waiting List</fullName>
            </value>
            <value>
                <fullName>On Request</fullName>
            </value>
            <value>
                <fullName>Enquiry gone cold</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Non-travelling</fullName>
            </value>
            <value>
                <fullName>In Progress Test</fullName>
            </value>
            <value>
                <fullName>Booked Test</fullName>
            </value>
            <value>
                <fullName>Enquiry gone cold Test</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled Test</fullName>
            </value>
            <value>
                <fullName>Waiting List Test</fullName>
            </value>
            <value>
                <fullName>On Request Test</fullName>
            </value>
            <value>
                <fullName>Enquiry test</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>