force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Client_Group_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Client_Group_Booking_Status__c</fullName>
    <label>Client Group Booking Status</label>
    <type>TextArea</type>
</CustomField>