force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Enquiry_Room_Type_Choice__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Enquiry_Room_Type_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry Room Type Choice</label>
    <referenceTo>sugati__Room_Type__c</referenceTo>
    <relationshipLabel>Group Members</relationshipLabel>
    <relationshipName>Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>