force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_General_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_General_Description__c</fullName>
    <label>General Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>