force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Individual_Deposit_Override__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Individual_Deposit_Override__c</fullName>
    <label>Individual Deposit Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>