force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Individual_Gross_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Individual_Gross_Sell_Price__c</fullName>
    <description>Sum of Individual Sell Price in Booking Currency</description>
    <label>Individual Gross Sell Price</label>
    <summarizedField>sugati__Individual_Booking_Detail__c.sugati__S_IBD_Individual_Sell_Price_Booking__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Individual_Booking_Detail__c.sugati__S_IBD_Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Individual_Booking_Detail__c.sugati__S_IBD_Group_Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>