force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Individual_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Individual_Margin__c</fullName>
    <formula>sugati__S_GM_Individual_Profit__c / sugati__S_GM_Individual_Gross_Sell_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>