force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Individual_Margin_after_Agency_Comm__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Individual_Margin_after_Agency_Comm__c</fullName>
    <formula>sugati__S_GM_Individual_Profit_Agency_Commission__c / sugati__S_GM_Individual_Net_Sell_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Margin after Agency Comm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>