force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Is_Free_Space__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Is_Free_Space__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Free Space</label>
    <type>Checkbox</type>
</CustomField>