force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Mobility_Requirements__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Mobility_Requirements__c</fullName>
    <label>Mobility Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>