force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Recommended_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Recommended_Sell_Price__c</fullName>
    <description>Total of all IBD Individual Sell Price in Booking Currency (excluding Price Adjustments)</description>
    <label>Recommended Sell Price</label>
    <summarizedField>sugati__Individual_Booking_Detail__c.sugati__S_IBD_Individual_Sell_Price_Booking__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Individual_Booking_Detail__c.sugati__S_IBD_Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>sugati__Individual_Booking_Detail__c.sugati__S_IBD_Is_Price_Adjustment__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Individual_Booking_Detail__c.sugati__S_IBD_Group_Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>