force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Return_Date__c</fullName>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>