force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Sales_Tax__c</fullName>
    <description>Sum of Sales Tax</description>
    <label>Sales Tax</label>
    <summarizedField>sugati__Individual_Booking_Detail__c.sugati__S_IBD_Sales_Tax__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Individual_Booking_Detail__c.sugati__S_IBD_Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Individual_Booking_Detail__c.sugati__S_IBD_Group_Member__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>