force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Sharing_Preference__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Sharing_Preference__c</fullName>
    <label>Sharing Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>