force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Single_Supplement__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Single_Supplement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Supplement</label>
    <type>Checkbox</type>
</CustomField>