force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Special_Requests__c</fullName>
    <label>Special Requests</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>