force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Tour_Room_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Tour_Room_Price__c</fullName>
    <label>Tour Room Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>