force-app/main/default/objects/sugati__Group_Member__c/fields/sugati__S_GM_Tour_Traveller_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GM_Tour_Traveller_Type__c</fullName>
    <label>Tour Traveller Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>